// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ClientsPage Snapshot Tests > matches snapshot for clients list 1`] = `
<div>
  <div
    class="container py-3 py-md-4"
    style="padding-bottom: 60px;"
  >
    <div
      class="d-flex flex-column flex-md-row justify-content-between align-items-start align-items-md-center mb-3 mb-md-4 gap-2"
    >
      <h1
        class="h2 mb-0"
        data-qa="clients-title"
      >
        Clients
      </h1>
      <a
        href="/clients/new"
      >
        <button
          class="btn btn-primary  w-100 w-md-auto"
          data-qa="clients-new-button"
        >
          Add
        </button>
      </a>
    </div>
    <div
      class="card shadow-sm mb-3 mb-md-4"
      data-qa="clients-filters"
    >
      <div
        class="card-body"
      >
        <p
          class="text-muted small mb-0"
        >
          No filters available for clients.
        </p>
      </div>
    </div>
    <div
      class="card shadow-sm"
    >
      <div
        class="table-responsive"
      >
        <table
          class="table table-hover mb-0"
          data-qa="clients-table"
        >
          <thead
            class="table-light"
          >
            <tr>
              <th>
                Name
              </th>
              <th>
                Actions
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              data-qa="client-row-1"
            >
              <td>
                <a
                  class="text-decoration-none fw-medium"
                  data-qa="client-name-link-1"
                  href="/clients/1"
                >
                  Client A
                </a>
              </td>
              <td>
                <div
                  class="d-flex gap-1 gap-md-2"
                >
                  <a
                    class="btn btn-sm btn-outline-primary"
                    data-qa="client-edit-button-1"
                    href="/clients/1/edit"
                  >
                    Edit
                  </a>
                  <button
                    class="btn btn-sm btn-outline-danger"
                    data-qa="client-delete-button-1"
                  >
                    Delete
                  </button>
                </div>
              </td>
            </tr>
            <tr
              data-qa="client-row-2"
            >
              <td>
                <a
                  class="text-decoration-none fw-medium"
                  data-qa="client-name-link-2"
                  href="/clients/2"
                >
                  Client B
                </a>
              </td>
              <td>
                <div
                  class="d-flex gap-1 gap-md-2"
                >
                  <a
                    class="btn btn-sm btn-outline-primary"
                    data-qa="client-edit-button-2"
                    href="/clients/2/edit"
                  >
                    Edit
                  </a>
                  <button
                    class="btn btn-sm btn-outline-danger"
                    data-qa="client-delete-button-2"
                  >
                    Delete
                  </button>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="bg-light border-top py-2 px-3 "
      data-qa="status-bar"
      style="position: fixed; bottom: 0px; left: 0px; right: 0px; z-index: 1000;"
    >
      <div
        class="container-fluid"
      >
        <div
          class="d-flex justify-content-between align-items-center"
        >
          <small
            class="text-muted"
            data-qa="status-bar-message"
          >
            Ready
          </small>
          <small
            class="text-muted"
            data-qa="status-bar-timestamp"
          >
            2:35:03 PM
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClientsPage Snapshot Tests > matches snapshot for empty state 1`] = `
<div>
  <div
    class="container py-3 py-md-4"
    style="padding-bottom: 60px;"
  >
    <div
      class="d-flex flex-column flex-md-row justify-content-between align-items-start align-items-md-center mb-3 mb-md-4 gap-2"
    >
      <h1
        class="h2 mb-0"
        data-qa="clients-title"
      >
        Clients
      </h1>
      <a
        href="/clients/new"
      >
        <button
          class="btn btn-primary  w-100 w-md-auto"
          data-qa="clients-new-button"
        >
          Add
        </button>
      </a>
    </div>
    <div
      class="card shadow-sm mb-3 mb-md-4"
      data-qa="clients-filters"
    >
      <div
        class="card-body"
      >
        <p
          class="text-muted small mb-0"
        >
          No filters available for clients.
        </p>
      </div>
    </div>
    <div
      class="card shadow-sm text-center py-5"
    >
      <div
        class="card-body"
      >
        <p
          class="text-muted mb-4"
          data-qa="clients-empty-state"
        >
          No clients found.
        </p>
      </div>
    </div>
    <div
      class="bg-light border-top py-2 px-3 "
      data-qa="status-bar"
      style="position: fixed; bottom: 0px; left: 0px; right: 0px; z-index: 1000;"
    >
      <div
        class="container-fluid"
      >
        <div
          class="d-flex justify-content-between align-items-center"
        >
          <small
            class="text-muted"
            data-qa="status-bar-message"
          >
            Ready
          </small>
          <small
            class="text-muted"
            data-qa="status-bar-timestamp"
          >
            2:35:03 PM
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClientsPage Snapshot Tests > matches snapshot for loading state 1`] = `
<div>
  <div
    class="d-flex flex-column align-items-center justify-content-center p-5"
    data-qa="loading"
  >
    <div
      class="spinner-border text-primary mb-3"
      data-qa="loading-spinner"
      role="status"
    >
      <span
        class="visually-hidden"
      >
        Loading...
      </span>
    </div>
    <p
      class="text-muted"
      data-qa="loading-message"
    >
      Loading clients...
    </p>
  </div>
</div>
`;
